sumo/tests/netgen/errors/multiple_types/grid_spider_and_random/options.netgen
--grid --rand --spider --grid.number=10 --grid.length=400 --output=net.net.xml
